--- a/proton/docs/zh/快速开始.md
+++ b/proton/docs/zh/快速开始.md
@@ -21,13 +21,79 @@ ECS) 框架, 旨在提供零运行时开销的抽象, 同时保持简洁, 表达
 
 ### 1. 组件 (Component) 与资源 (Resource)
 
+任何满足`component_concept`的类型 (可通过继承`component_t`) 或特化`as_component`为
+`true`即被视为组件. 资源 (Resource) 类似, 但作用于全局, 所有系统均可访问.
+
+```c++
+struct position {
+    using component_concept = component_t;
+    float x, y, z;
+};
+
+// 另一种声明组件的方式
+struct direction {
+    float x, y, z;
+};
+template <>
+constexpr bool as_component<direction> = true;
+
+// 资源示例
+struct keyboard {
+    using resource_concept = resource_t;
+    // ...
+};
+
+// 支持资源的模板继承
+template <typename O>
+struct input : O {
+    using resource_concept = typename O::resource_concept;
+};
+```
+
 ### 2. 数据访问: `query`与`res`
+
+通过`query`和`res`类模板访问组件或资源. `query`的类型参数应为查询过滤器 (如`with`) , 
+支持以值, 常量引用或非常量引用的形式请求数据.
+
+```c++
+oid update_time(res<timer&> r) {
+    auto [timer] = r;
+    timer.update();
+}
+
+void movement(query<with<position&, const velocity&>> q,
+              res<const timer&> r) {
+    auto [timer] = r;
+    auto delta = timer.delta();
+    for (auto [pos, vel] : q.get()) {
+        pos.x += vel.x * delta;
+        pos.y += vel.y * delta;
+        pos.z += vel.z * delta;
+    }
+}
+
+void echo(query<const name&> q) {
+    for (auto [entity, name] : q.get_with_entity()) {
+        println("实体 {} 的名称为：{}", entity, name);
+    }
+}
+```
 
 ### 3. 本地状态 (Local)
 
+无法在系统间共享的变量称为本地状态 (Local), 每个系统实例拥有其独立副本.
+
+```c++
+void render_system(
+    query<with<const position&, const rotation&, scale, visible>> qry,
+    local<framebuffer_manager> local) {
+    // 使用 local 中的本地状态进行渲染
+}
+```
+
 ### 4. 命令 (Commands)
 
-框架内置命令缓冲区 (Command Buffer) 支, 便于在多线程环境中高效操作世界状态. 用户可通过
+框架内置命令缓冲区 (Command Buffer) 支持, 便于在多线程环境中高效操作世界状态. 用户可通过
 `commands`创建/销毁实体、添加/移除组件等.
 
 ```c++
