--- a/proton/docs/zh/快速开始.md
+++ b/proton/docs/zh/快速开始.md
@@ -11,10 +11,10 @@ ECS) 框架, 旨在提供零运行时开销的抽象, 同时保持简洁, 表达
 
 ## 核心特性
 
--   零运行时开销: 
+-   零运行时开销: 尽可能避免虚函数分发.
 -   编译期世界与调度构建: 完整的执行序列在编译期生成
--   声明式调度:
--   支持并行
+-   声明式调度: 可通过自然的语法直接注册时表达依赖关系
+-   支持并行: 内置`execution`与命令缓冲区支持
 -   DSL风格的简洁API: 系统可直接以自然的C++函数形式编写
 
 ## 核心概念
